# -

./: .env.example  .gitignore  LICENSE  Makefile  NOTICE  README.md  docker-compose.yaml  h-pulse-mobile-demo.html  package.json
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: audit.py  celery_app.py  config.py  database.py  deps.py  logging.py  main.py  models.py  observability.py  rate_limit.py  schemas.py  security.py  tasks.py
backend/app/routers/: auth.py  predictions.py  users.py
backend/scripts/: seed.sh
backend/tests/: test_auth.py  test_health.py  test_predictions.py
docs/: README.md  architecture.md  compliance.md  data_dictionary.md  sequence.md  threat_model.md
frontend/: .eslintrc.json  Dockerfile  README.md  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
h_pulse/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  demo.py  main.py  pytest.ini  requirements.txt  simple_demo.py
h_pulse/data_collection/: __init__.py  eastern.py  western.py
h_pulse/h_pulse/: __init__.py  main.py
h_pulse/output_generation/: __init__.py  api.py  report.py
h_pulse/prediction_ai/: __init__.py  infer.py  model.py  train.py
h_pulse/quantum_engine/: __init__.py  simulator.py
h_pulse/tests/: __init__.py  test_eastern.py  test_quantum.py  (+2 more)
reports/: timeline.html  timeline.json
runs/: config.json  metrics.jsonl
scripts/: gen_third_party_licenses.sh
(+21 files in other folders)
